# tomltable

./: Makefile  README.md  pyproject.toml  setup.py
example/: example_mag.R  example_mag.tex  example_mag.toml  example_mag_squared.R  example_mag_squared.tex  example_mag_squared.toml  example_model_1.json  example_model_2.json  example_model_3.json  example_model_4.json
example/preview/: preview_mag.tex  preview_mag_squared.tex
src/tomltable/: __init__.py  errors.py  parser.py  template.py  types.py
tests/: test_tomltable.py
tomltable/: __init__.py  parser.py  template.py  test_tomltable.py  tomltable.py
